# comfyui-template

./: PLAN.md  README.md  README.md.example  __init__.py  comfy-env-root.toml  comfy-test.toml  install.py  prestartup_script.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  CLAUDE.md.example  settings.local.json
.github/workflows/: pr-gate.yml  publish.yml  run-tests.yml
.github/workflows/config/: secret_key
config/: secret_key
js/: extension.js
nodes/: __init__.py  example_node.py  load_model.py  output_node.py  utils.py
